# ativos_financeiros_ps

./: .gitignore  pyproject.toml
financeiro/: core.py  models.py
tests/: test_financeiro.py
