[tool.poetry]
name = "financeiro"
version = "0.1.0"
description = ""
authors = ["Rogerio Campos <rogerio.campos07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
bs4 = "^0.0.1"
dynaconf = "^3.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
